# rust-rest

./: .gitignore  Cargo.toml
db/sql/: todo.up.postgres.sql  todo.up.sqlite.sql
docker/: postgres.yml
src/: main.rs
src/model/: mod.rs  todo_model.rs
src/security/: authentication.rs  mod.rs  tls.rs
src/service/: todo_service.rs
